--- a/doxygen_docs/servok_8c.html
+++ b/doxygen_docs/servok_8c.html
@@ -188,6 +188,7 @@ Variables</h2></td></tr>
   </dd>
 </dl>
 <dl class="section return"><dt>Returns</dt><dd>0 on success, -1 on failure (most likely for requesting an incorrect channel). </dd></dl>
+<p>if(channel &gt; 1) return -1; gpio_port port = (channel == 0) ? GPIO_B : GPIO_A; uint32_t pin_num = (channel == 0) ? SERVO0_PIN : SERVO1_PIN; if(enabled) { if(channel == 0) servo0_en = 1; else servo1_en = 1; gpio_init(port, pin_num, MODE_GP_OUTPUT, OUTPUT_PUSH_PULL, OUTPUT_SPEED_LOW, PUPD_NONE, ALT0); } else { gpio_clr(port, pin_num); if (channel == 0) { servo0_tick_num = 0; servo0_en = 0; } else { servo1_tick_num = 0; servo1_en = 0; } } return 0; </p>
 
 </div>
 </div>
@@ -224,6 +225,7 @@ Variables</h2></td></tr>
   </dd>
 </dl>
 <dl class="section return"><dt>Returns</dt><dd>0 on success, -1 on failure if the servo channel is not enabled. </dd></dl>
+<p>if(channel == 0) { if(!servo0_en) return -1; servo0_tick_num = (uint32_t)(((float)angle/100.0 + SERVO_MIN_WIDTH)/.01); } else if(channel == 1) { if(!servo1_en) return -1; servo1_tick_num = (uint32_t)(((float)angle/100.0 + SERVO_MIN_WIDTH)/.01); } else { return -1; } return 0; </p>
 
 </div>
 </div>
