--- a/doxygen_docs/svc__handler_8c.html
+++ b/doxygen_docs/svc__handler_8c.html
@@ -107,7 +107,9 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <code>#include &lt;debug.h&gt;</code><br />
 <code>#include &lt;printk.h&gt;</code><br />
 <code>#include &lt;syscall.h&gt;</code><br />
+<code>#include &lt;syscall_thread.h&gt;</code><br />
 <code>#include &lt;svc_num.h&gt;</code><br />
+<code>#include &lt;arm.h&gt;</code><br />
 </div><table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="nested-classes"></a>
 Data Structures</h2></td></tr>
