--- a/doxygen_docs/kmalloc_8c.html
+++ b/doxygen_docs/kmalloc_8c.html
@@ -291,7 +291,7 @@ Functions</h2></td></tr>
 <p>This function lets you perform unaligned allocations. If the unaligned flag has not be set, you should fall into a breakpoint look at debug.h to see how to do this. </p>
 <dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramdir">[in]</td><td class="paramname">kmalloc_t</td><td>The kmalloc t </td></tr>
+    <tr><td class="paramdir">[in]</td><td class="paramname">internals</td><td>The kmalloc_t struct of internal info used for memory management. </td></tr>
     <tr><td class="paramdir">[in]</td><td class="paramname">size</td><td>The allocation size.</td></tr>
   </table>
   </dd>
