--- a/doxygen_docs/svc__handler_8c.html
+++ b/doxygen_docs/svc__handler_8c.html
@@ -107,6 +107,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <code>#include &lt;printk.h&gt;</code><br />
 <code>#include &lt;syscall.h&gt;</code><br />
 <code>#include &lt;syscall_thread.h&gt;</code><br />
+<code>#include &lt;syscall_mutex.h&gt;</code><br />
 <code>#include &lt;svc_num.h&gt;</code><br />
 <code>#include &lt;arm.h&gt;</code><br />
 </div><table class="memberdecls">
