--- a/doxygen_docs/kernel_8c.html
+++ b/doxygen_docs/kernel_8c.html
@@ -111,6 +111,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <code>#include &lt;stdio.h&gt;</code><br />
 <code>#include &lt;led_driver.h&gt;</code><br />
 <code>#include &lt;servok.h&gt;</code><br />
+<code>#include &lt;mpu.h&gt;</code><br />
 </div><table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="define-members"></a>
 Macros</h2></td></tr>
